--- a/MYSELF.html
+++ b/MYSELF.html
@@ -99,7 +99,7 @@ img{
 
 <div>
 <ul>
-      <li><a href="HOME.html">HOME</a></li>
+      <li><a href="index.html">HOME</a></li>
       <li><a href="OTHERS.html">OTHERS</a></li>
       <li><a class="active">MYSELF</a></li>
 
