--- a/OTHERS.HTML
+++ b/OTHERS.HTML
@@ -95,7 +95,7 @@ img{
 <div>
 <ul>
 	  
-      <li><a href="HOME.html">HOME</a></li>
+      <li><a href="index.html">HOME</a></li>
       <li><a class="active">OTHERS</a></li>
       <li><a href="MYSELF.html">MYSELF</a></li><br>
 	  <li><a href="favorite.html">FAVORITES</a></li><br><br>
